--- a/writeup/Replication Report Template.Rmd
+++ b/writeup/Replication Report Template.Rmd
@@ -33,6 +33,14 @@ Participants will first provide background information, which includes age, gend
 
 I think this may be a 10-20 minutes questionnaire. Once I make the Qualtrics survey and find out if it's too long, I can maybe cut some background information. I have never used Prolific and I am not sure if it's easy to recruit older adults there. The original paper has a sample of 555 adults aged 20 to 75 (M = 44.65, SD = 13.2). I hope to be able to recruit a sample that matches with this age distribution. Another challenge is to recruit enough people for the experiment... but I care more about the process of learning than the results! I also have to recruit only people who have a full-time or part-time job. I am not sure if these conditions could be specified in the recruitment material. My main challenge is that I don't know anything about Prolific because I did mostly in-person physio experiments in the past! I am excited to learn though!
 
+Modification 10/14/22
+
+Participants will be randomly assigned to one of three experimental conditions where time horizons at work were unspecified, expanded, or constrained. Each condition includes a brief manipulation prompt, which had been validated in the original study. After reading the prompt, we ask participants in each condition to choose one of three work-related activities, each of which represent pursuit of a different type of goal. In the end, participants will provide information on their age. 
+
+This would take around 3 minutes. The original paper has a sample of 555 adults aged 20 to 75 (M = 44.65, SD = 13.2). I hope to be able to recruit a sample that matches with this age distribution by creating age buckets on Prolific, but if not, I can also just control for age.
+
+I also have to recruit only people who have a full-time or part-time job. I am not sure if these conditions could be specified in the recruitment material. 
+
 ### Links
 Canvas Instruction: A link to the repository and to the original paper (as hosted in your repo). The goal is that we should be able to click on these links and review that your repo is formatted right and look at the original paper.
 [Link to my repo](https://github.com/psych251/shavit2022)
@@ -40,44 +48,63 @@ Canvas Instruction: A link to the repository and to the original paper (as hoste
 
 Above is project proposal assignment as of Oct 7, 2022
 -------------------------------------------------
-Below is untouched methods, results, and discussion sections
+Below is project report assignment as of Oct 23, 2022 
 
 ##Methods
 
-###Power Analysis
+###Power Analysis --- NEXT TIME!!!!!!!
 
 Original effect size, power analysis for samples to achieve 80%, 90%, 95% power to detect that effect size.  Considerations of feasibility for selecting planned sample size.
 
-###Planned Sample
+###Planned Sample --- NEED TO ADD SAMPLE SIZE NEXT TIME!!!!!!!
 
 Planned sample size and/or termination rule, sampling frame, known demographics if any, preselection rules if any.
 
-###Materials
+Participants need to be working full-time or part-time. Participants need to be relatively evenly distributed from ages 20-75. In the paper, it was 20 to 75 years with a mean of 44.65, and SD of 13.2, and it was similar across conditions.
+
+###Materials + Procedure --- NEED TO MAKE PROGRESS ON QUALTRICS NEXT TIME!!!!!!!
 
 All materials - can quote directly from original article - just put the text in quotations and note that this was followed precisely.  Or, quote directly and just point out exceptions to what was described in the original article.
 
-###Procedure	
+Participants first provided background information and were then randomly assigned to one of three experimental conditions where time horizons at work were either unspecified or expanded. In the unspecified condition, participants were asked to imagine that they arrived at work 1 day and found that they had unscheduled time. Participants in the expanded time horizons condition were told that “the company would like you to stay with them considerably longer than you had planned.”
 
-Can quote directly from original article - just put the text in quotations and note that this was followed precisely.  Or, quote directly and just point out exceptions to what was described in the original article.
+After reading the prompt, participants in each condition were asked to choose one of three work-related activities that they would pursue: “Help a colleague or a friend with a company project,” “Work on a project that may help you advance you career,” or “Work on a project that may lead the company in a new direction.” Helping colleagues represented pursuit of emotionally meaningful goals, whereas career-advancing and taking the company in new directions represented pursuit of exploratory goals (future payoffs and learning new information, respectively).
 
-###Analysis Plan
+I have obtained the original questionnaire materials from the author, and my Qualtrics questionnaire is in progress: https://stanforduniversity.qualtrics.com/jfe/form/SV_0Utk18jvCwCk61w
+
+###Analysis Plan --- NEED TO PILOT QUALTRICS AND SEE IF IT'S SHORT ENOUGH FOR ME TO ADD MORE COVARIATES NEXT TIME!!!!!!!
 
 Can also quote directly, though it is less often spelled out effectively for an analysis strategy section.  The key is to report an analysis strategy that is as close to the original - data cleaning rules, data exclusion rules, covariates, etc. - as possible.  
 
 **Clarify key analysis of interest here**  You can also pre-specify additional analyses you plan to do.
 
+The original paper did not mention data cleaning or exclusion rules. 
+
+The focal tests are the simple effects of age on the likelihood of choosing to help a colleague or a friend over any of the future-oriented options, in each of the two conditions. The original paper estimated the effects of age and time horizons condition using logistic regressions in which the intercept indicates a difference from a chance level of 33%. Although they did not expect to find significant Age x Condition interactions because they were not found in past research, they included them in the model to provide context for understanding the focal tests of age associations with preferences in each of the conditions.
+
+As a first step, they entered only age, condition, and their interaction term into the model. In a second step, to ensure any observed age effects are not caused by third variables, they included background variables found to be significantly associated with age in the current sample as control variables. To facilitate interpretation, they supplemented this approach with chi-square analysis. 
+
+In post hoc analyses, they used multinomial regression to examine the likelihood of choosing to help a colleague or a friend over each of the future oriented activities independently. They used this exploratory analysis to better understand age-related preferences for emotionally meaningful activities at work versus either self-advancement or knowledge seeking. Here, too, they first entered age and condition (with their interaction term) into the model, and then followed by including background variables to control for potential confounds. In all models, continuous variables were standardized to facilitate interpretation of model estimates and reflect the “main”
+effect of condition.
+
+The original paper included many background variables as covariates. Because of our limited funding, I will probably not include any covariates for now until I test the Qualtrics survey and find out how long it takes.
+
 ###Differences from Original Study
 
 Explicitly describe known differences in sample, setting, procedure, and analysis plan from original study.  The goal, of course, is to minimize those differences, but differences will inevitably occur.  Also, note whether such differences are anticipated to make a difference based on claims in the original article or subsequent published research on the conditions for obtaining the effect.
 
-### Methods Addendum (Post Data Collection)
+The sample will be much smaller than the original study.
+I will only include two of the three conditions from the original studies that had the largest effect.
+I will likely not include any covariates or only a few. None of the covariates are theoretically important.
+
+### Methods Addendum (Post Data Collection) --- NEXT TIME!!!!!!!
 
 You can comment this section out prior to final report with data collection.
 
-#### Actual Sample
+#### Actual Sample --- NEXT TIME!!!!!!!
   Sample size, demographics, data exclusions based on rules spelled out in analysis plan
 
-#### Differences from pre-data collection methods plan
+#### Differences from pre-data collection methods plan --- NEXT TIME!!!!!!!
   Any differences from what was described as the original plan, or “none”.
 
 
@@ -90,6 +117,11 @@ Data preparation following the analysis plan.
 	
 ```{r include=F}
 ###Data Preparation
+
+The data preparation will be very straightforward since the final dataset will only have a few columns:
+Age
+Preferred activity: people from both conditions will be asked the same question
+Potential covariates such as gender or SES
 
 ####Load Relevant Libraries and Functions
 
@@ -105,6 +137,13 @@ Data preparation following the analysis plan.
 The analyses as specified in the analysis plan.  
 
 *Side-by-side graph with original graph is ideal here*
+
+The focal tests are the simple effects of age on the likelihood of choosing to help a colleague or a friend over any of the future-oriented options, in each of the two conditions. 
+I will estimate the effects of age and time horizons condition using logistic regressions in which the intercept indicates a difference from a chance level of 33%. 
+As a first step, I will enter only age, condition, and their interaction term into the model. 
+If I have collected any background variables, I will include background variables as control variables. 
+
+For original graph, see Figure 1: https://github.com/psych251/shavit2022/blob/main/original_paper/original_paper.pdf
 
 ###Exploratory analyses
 
